--- a/ujian_datavis_jcds07.ipynb
+++ b/ujian_datavis_jcds07.ipynb
@@ -168,90 +168,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>bar</th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>foo</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>one</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>two</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "bar  A  B  C\n",
-       "foo         \n",
-       "one  1  2  3\n",
-       "two  4  5  6"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfc = pd.DataFrame({'foo': ['one', 'one', 'one', 'two', 'two',\n",
-    "                            'two'],\n",
-    "                    'bar': ['A', 'B', 'C', 'A', 'B', 'C'],\n",
-    "                    'baz': [1, 2, 3, 4, 5, 6],\n",
-    "                    'zoo': ['x', 'y', 'z', 'q', 'w', 't']})\n",
-    "\n",
-    "dfc\n",
-    "dfc.pivot(index='foo', columns='bar', values='baz')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -295,6 +211,310 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>maxMale</th>\n",
+       "      <th>minMale</th>\n",
+       "      <th>maxFemale</th>\n",
+       "      <th>minFemale</th>\n",
+       "      <th>rerataMale</th>\n",
+       "      <th>rerataFemale</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>administrator</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>37.162791</td>\n",
+       "      <td>37.162791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>artist</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>32.333333</td>\n",
+       "      <td>32.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>doctor</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>43.571429</td>\n",
+       "      <td>43.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>educator</th>\n",
+       "      <td>63.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>43.101449</td>\n",
+       "      <td>43.101449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>engineer</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>36.600000</td>\n",
+       "      <td>36.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>entertainment</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>29.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>executive</th>\n",
+       "      <td>69.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>38.172414</td>\n",
+       "      <td>38.172414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>healthcare</th>\n",
+       "      <td>62.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>45.400000</td>\n",
+       "      <td>45.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>homemaker</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lawyer</th>\n",
+       "      <td>53.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>36.200000</td>\n",
+       "      <td>36.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>librarian</th>\n",
+       "      <td>69.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>marketing</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>37.875000</td>\n",
+       "      <td>37.875000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>none</th>\n",
+       "      <td>33.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>18.600000</td>\n",
+       "      <td>18.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>other</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>34.028986</td>\n",
+       "      <td>34.028986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>programmer</th>\n",
+       "      <td>63.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>33.216667</td>\n",
+       "      <td>33.216667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>retired</th>\n",
+       "      <td>73.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>62.538462</td>\n",
+       "      <td>62.538462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>salesman</th>\n",
+       "      <td>66.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>38.555556</td>\n",
+       "      <td>38.555556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>scientist</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>36.321429</td>\n",
+       "      <td>36.321429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>student</th>\n",
+       "      <td>42.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>22.669118</td>\n",
+       "      <td>22.669118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>technician</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>32.961538</td>\n",
+       "      <td>32.961538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>writer</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>35.346154</td>\n",
+       "      <td>35.346154</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               maxMale  minMale  maxFemale  minFemale  rerataMale  \\\n",
+       "administrator     70.0     21.0       62.0       22.0   37.162791   \n",
+       "artist            45.0     20.0       48.0       19.0   32.333333   \n",
+       "doctor            64.0     28.0        NaN        NaN   43.571429   \n",
+       "educator          63.0     25.0       51.0       23.0   43.101449   \n",
+       "engineer          70.0     22.0       36.0       23.0   36.600000   \n",
+       "entertainment     50.0     15.0       38.0       24.0   29.000000   \n",
+       "executive         69.0     22.0       49.0       39.0   38.172414   \n",
+       "healthcare        62.0     28.0       53.0       22.0   45.400000   \n",
+       "homemaker         23.0     23.0       50.0       20.0   23.000000   \n",
+       "lawyer            53.0     21.0       51.0       28.0   36.200000   \n",
+       "librarian         69.0     23.0       59.0       26.0   40.000000   \n",
+       "marketing         55.0     24.0       50.0       24.0   37.875000   \n",
+       "none              33.0     11.0       55.0       26.0   18.600000   \n",
+       "other             64.0     13.0       55.0       18.0   34.028986   \n",
+       "programmer        63.0     20.0       38.0       26.0   33.216667   \n",
+       "retired           73.0     51.0       70.0       70.0   62.538462   \n",
+       "salesman          66.0     21.0       33.0       18.0   38.555556   \n",
+       "scientist         55.0     23.0       31.0       26.0   36.321429   \n",
+       "student           42.0      7.0       38.0       13.0   22.669118   \n",
+       "technician        55.0     21.0       38.0       38.0   32.961538   \n",
+       "writer            60.0     21.0       56.0       18.0   35.346154   \n",
+       "\n",
+       "               rerataFemale  \n",
+       "administrator     37.162791  \n",
+       "artist            32.333333  \n",
+       "doctor            43.571429  \n",
+       "educator          43.101449  \n",
+       "engineer          36.600000  \n",
+       "entertainment     29.000000  \n",
+       "executive         38.172414  \n",
+       "healthcare        45.400000  \n",
+       "homemaker         23.000000  \n",
+       "lawyer            36.200000  \n",
+       "librarian         40.000000  \n",
+       "marketing         37.875000  \n",
+       "none              18.600000  \n",
+       "other             34.028986  \n",
+       "programmer        33.216667  \n",
+       "retired           62.538462  \n",
+       "salesman          38.555556  \n",
+       "scientist         36.321429  \n",
+       "student           22.669118  \n",
+       "technician        32.961538  \n",
+       "writer            35.346154  "
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maxMale = dfMale.groupby('occupation').describe().age['max']\n",
+    "minMale = dfMale.groupby('occupation').describe().age['min']\n",
+    "rerataMale = dfMale.groupby('occupation').describe().age['mean']\n",
+    "\n",
+    "maxFemale = dfFemale.groupby('occupation').describe().age['max']\n",
+    "minFemale = dfFemale.groupby('occupation').describe().age['min']\n",
+    "rerataFemale = dfMale.groupby('occupation').describe().age['mean']\n",
+    "\n",
+    "dfsorted =  df.sort_values('occupation')\n",
+    "pekerjaan = dfsorted['occupation'].unique()\n",
+    "\n",
+    "dfView = pd.DataFrame({\n",
+    "        'maxMale' : maxMale,\n",
+    "        'minMale' : minMale,\n",
+    "        'maxFemale' : maxFemale,\n",
+    "        'minFemale' : minFemale,\n",
+    "        'rerataMale' : rerataMale,\n",
+    "        'rerataFemale' : rerataFemale\n",
+    "})\n",
+    "dfView"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -303,66 +523,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "occupation\n",
-      "administrator     43\n",
-      "artist            15\n",
-      "doctor             7\n",
-      "educator          69\n",
-      "engineer          65\n",
-      "entertainment     16\n",
-      "executive         29\n",
-      "healthcare         5\n",
-      "homemaker          1\n",
-      "lawyer            10\n",
-      "librarian         22\n",
-      "marketing         16\n",
-      "none               5\n",
-      "other             69\n",
-      "programmer        60\n",
-      "retired           13\n",
-      "salesman           9\n",
-      "scientist         28\n",
-      "student          136\n",
-      "technician        26\n",
-      "writer            26\n",
-      "Name: gender, dtype: int64\n",
-      "occupation\n",
-      "administrator    36\n",
-      "artist           13\n",
-      "educator         26\n",
-      "engineer          2\n",
-      "entertainment     2\n",
-      "executive         3\n",
-      "healthcare       11\n",
-      "homemaker         6\n",
-      "lawyer            2\n",
-      "librarian        29\n",
-      "marketing        10\n",
-      "none              4\n",
-      "other            36\n",
-      "programmer        6\n",
-      "retired           1\n",
-      "salesman          3\n",
-      "scientist         3\n",
-      "student          60\n",
-      "technician        1\n",
-      "writer           19\n",
-      "Name: gender, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df1 = dfMale.groupby(\"occupation\").count()['gender']\n",
-    "print(df1)\n",
+    "# print(df1)\n",
     "df2 = dfFemale.groupby(\"occupation\").count()['gender']\n",
-    "print(df2)"
+    "# print(df2)"
    ]
   },
   {
