--- a/ujian_datavis_jcds07.ipynb
+++ b/ujian_datavis_jcds07.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -267,8 +267,8 @@
        "      <th>doctor</th>\n",
        "      <td>64.0</td>\n",
        "      <td>28.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>43.571429</td>\n",
        "      <td>43.571429</td>\n",
        "    </tr>\n",
@@ -442,7 +442,7 @@
        "               maxMale  minMale  maxFemale  minFemale  rerataMale  \\\n",
        "administrator     70.0     21.0       62.0       22.0   37.162791   \n",
        "artist            45.0     20.0       48.0       19.0   32.333333   \n",
-       "doctor            64.0     28.0        NaN        NaN   43.571429   \n",
+       "doctor            64.0     28.0        0.0        0.0   43.571429   \n",
        "educator          63.0     25.0       51.0       23.0   43.101449   \n",
        "engineer          70.0     22.0       36.0       23.0   36.600000   \n",
        "entertainment     50.0     15.0       38.0       24.0   29.000000   \n",
@@ -486,7 +486,7 @@
        "writer            35.346154  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
     "        'rerataMale' : rerataMale,\n",
     "        'rerataFemale' : rerataFemale\n",
     "})\n",
-    "dfView"
+    "dfView.fillna(0)"
    ]
   },
   {
