--- a/ujian_datavis_jcds07.ipynb
+++ b/ujian_datavis_jcds07.ipynb
@@ -14,7 +14,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# read CSV Profesi.csv"
+    "# Ujian Nomor 3\n",
+    "#### read CSV Profesi.csv"
    ]
   },
   {
@@ -119,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Ada berapa jenis profesi yang ada dalam dataset tersebut? Sebutkan!"
+    "## 2.1 Ada berapa jenis profesi yang ada dalam dataset tersebut? Sebutkan!"
    ]
   },
   {
@@ -164,7 +165,384 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2. Buatlah sebuah dataframe yang menunjukkan data usia maksimal, minimal & rata-ratanya, berdasarkan profesi & gender!"
+    "## 2.2. Buatlah sebuah dataframe yang menunjukkan data usia maksimal, minimal & rata-ratanya, berdasarkan profesi & gender!\n",
+    "\n",
+    "cara 1 : sesuai soal\n",
+    "cara 2 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>max_usia</th>\n",
+       "      <th>min_usia</th>\n",
+       "      <th>rerata_usia</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>occupation</th>\n",
+       "      <th>gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">administrator</th>\n",
+       "      <th>F</th>\n",
+       "      <td>62</td>\n",
+       "      <td>22</td>\n",
+       "      <td>40.638889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>70</td>\n",
+       "      <td>21</td>\n",
+       "      <td>37.162791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">artist</th>\n",
+       "      <th>F</th>\n",
+       "      <td>48</td>\n",
+       "      <td>19</td>\n",
+       "      <td>30.307692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>45</td>\n",
+       "      <td>20</td>\n",
+       "      <td>32.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>doctor</th>\n",
+       "      <th>M</th>\n",
+       "      <td>64</td>\n",
+       "      <td>28</td>\n",
+       "      <td>43.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">educator</th>\n",
+       "      <th>F</th>\n",
+       "      <td>51</td>\n",
+       "      <td>23</td>\n",
+       "      <td>39.115385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>63</td>\n",
+       "      <td>25</td>\n",
+       "      <td>43.101449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">engineer</th>\n",
+       "      <th>F</th>\n",
+       "      <td>36</td>\n",
+       "      <td>23</td>\n",
+       "      <td>29.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>70</td>\n",
+       "      <td>22</td>\n",
+       "      <td>36.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">entertainment</th>\n",
+       "      <th>F</th>\n",
+       "      <td>38</td>\n",
+       "      <td>24</td>\n",
+       "      <td>31.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>50</td>\n",
+       "      <td>15</td>\n",
+       "      <td>29.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">executive</th>\n",
+       "      <th>F</th>\n",
+       "      <td>49</td>\n",
+       "      <td>39</td>\n",
+       "      <td>44.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>69</td>\n",
+       "      <td>22</td>\n",
+       "      <td>38.172414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">healthcare</th>\n",
+       "      <th>F</th>\n",
+       "      <td>53</td>\n",
+       "      <td>22</td>\n",
+       "      <td>39.818182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>62</td>\n",
+       "      <td>28</td>\n",
+       "      <td>45.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">homemaker</th>\n",
+       "      <th>F</th>\n",
+       "      <td>50</td>\n",
+       "      <td>20</td>\n",
+       "      <td>34.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">lawyer</th>\n",
+       "      <th>F</th>\n",
+       "      <td>51</td>\n",
+       "      <td>28</td>\n",
+       "      <td>39.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>53</td>\n",
+       "      <td>21</td>\n",
+       "      <td>36.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">librarian</th>\n",
+       "      <th>F</th>\n",
+       "      <td>59</td>\n",
+       "      <td>26</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>69</td>\n",
+       "      <td>23</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">marketing</th>\n",
+       "      <th>F</th>\n",
+       "      <td>50</td>\n",
+       "      <td>24</td>\n",
+       "      <td>37.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>55</td>\n",
+       "      <td>24</td>\n",
+       "      <td>37.875000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">none</th>\n",
+       "      <th>F</th>\n",
+       "      <td>55</td>\n",
+       "      <td>26</td>\n",
+       "      <td>36.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>33</td>\n",
+       "      <td>11</td>\n",
+       "      <td>18.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">other</th>\n",
+       "      <th>F</th>\n",
+       "      <td>55</td>\n",
+       "      <td>18</td>\n",
+       "      <td>35.472222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>64</td>\n",
+       "      <td>13</td>\n",
+       "      <td>34.028986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">programmer</th>\n",
+       "      <th>F</th>\n",
+       "      <td>38</td>\n",
+       "      <td>26</td>\n",
+       "      <td>32.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>63</td>\n",
+       "      <td>20</td>\n",
+       "      <td>33.216667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">retired</th>\n",
+       "      <th>F</th>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>73</td>\n",
+       "      <td>51</td>\n",
+       "      <td>62.538462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">salesman</th>\n",
+       "      <th>F</th>\n",
+       "      <td>33</td>\n",
+       "      <td>18</td>\n",
+       "      <td>27.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>66</td>\n",
+       "      <td>21</td>\n",
+       "      <td>38.555556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">scientist</th>\n",
+       "      <th>F</th>\n",
+       "      <td>31</td>\n",
+       "      <td>26</td>\n",
+       "      <td>28.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>55</td>\n",
+       "      <td>23</td>\n",
+       "      <td>36.321429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">student</th>\n",
+       "      <th>F</th>\n",
+       "      <td>38</td>\n",
+       "      <td>13</td>\n",
+       "      <td>20.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>42</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22.669118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">technician</th>\n",
+       "      <th>F</th>\n",
+       "      <td>38</td>\n",
+       "      <td>38</td>\n",
+       "      <td>38.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>55</td>\n",
+       "      <td>21</td>\n",
+       "      <td>32.961538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">writer</th>\n",
+       "      <th>F</th>\n",
+       "      <td>56</td>\n",
+       "      <td>18</td>\n",
+       "      <td>37.631579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>60</td>\n",
+       "      <td>21</td>\n",
+       "      <td>35.346154</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      max_usia  min_usia  rerata_usia\n",
+       "occupation    gender                                 \n",
+       "administrator F             62        22    40.638889\n",
+       "              M             70        21    37.162791\n",
+       "artist        F             48        19    30.307692\n",
+       "              M             45        20    32.333333\n",
+       "doctor        M             64        28    43.571429\n",
+       "educator      F             51        23    39.115385\n",
+       "              M             63        25    43.101449\n",
+       "engineer      F             36        23    29.500000\n",
+       "              M             70        22    36.600000\n",
+       "entertainment F             38        24    31.000000\n",
+       "              M             50        15    29.000000\n",
+       "executive     F             49        39    44.000000\n",
+       "              M             69        22    38.172414\n",
+       "healthcare    F             53        22    39.818182\n",
+       "              M             62        28    45.400000\n",
+       "homemaker     F             50        20    34.166667\n",
+       "              M             23        23    23.000000\n",
+       "lawyer        F             51        28    39.500000\n",
+       "              M             53        21    36.200000\n",
+       "librarian     F             59        26    40.000000\n",
+       "              M             69        23    40.000000\n",
+       "marketing     F             50        24    37.200000\n",
+       "              M             55        24    37.875000\n",
+       "none          F             55        26    36.500000\n",
+       "              M             33        11    18.600000\n",
+       "other         F             55        18    35.472222\n",
+       "              M             64        13    34.028986\n",
+       "programmer    F             38        26    32.166667\n",
+       "              M             63        20    33.216667\n",
+       "retired       F             70        70    70.000000\n",
+       "              M             73        51    62.538462\n",
+       "salesman      F             33        18    27.000000\n",
+       "              M             66        21    38.555556\n",
+       "scientist     F             31        26    28.333333\n",
+       "              M             55        23    36.321429\n",
+       "student       F             38        13    20.750000\n",
+       "              M             42         7    22.669118\n",
+       "technician    F             38        38    38.000000\n",
+       "              M             55        21    32.961538\n",
+       "writer        F             56        18    37.631579\n",
+       "              M             60        21    35.346154"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfYukMax = df.groupby(['occupation','gender']).max()\n",
+    "dfYukMin =  df.groupby(['occupation','gender']).min()\n",
+    "dfYukMean =  df.groupby(['occupation','gender']).mean()\n",
+    "# dfYukMin.age\n",
+    "# dfYukMax.age\n",
+    "# dfYukMean.age\n",
+    "dfIniDia = pd.concat([dfYukMax.age,dfYukMin.age, dfYukMean.age], axis=1)\n",
+    "dfIniDia.columns =['max_usia','min_usia','rerata_usia']\n",
+    "dfIniDia"
    ]
   },
   {
@@ -176,38 +554,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jumlah gender MALE 670\n"
-     ]
-    }
-   ],
-   "source": [
-    "dfMale = df[df['gender']=='M']\n",
-    "print(\"jumlah gender MALE\",len(dfMale))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "jumlah gender MALE 670\n",
       "jumlah gender FEMALE 273\n"
      ]
     }
    ],
    "source": [
+    "dfMale = df[df['gender']=='M']\n",
+    "print(\"jumlah gender MALE\",len(dfMale))\n",
+    "\n",
     "dfFemale = df[df.gender == 'F']\n",
     "print(\"jumlah gender FEMALE\",len(dfFemale))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dibuang sayang :''"
    ]
   },
   {
@@ -492,6 +863,8 @@
     }
    ],
    "source": [
+    "# \"DIBUANG SAYANG\"\n",
+    "\n",
     "maxMale = dfMale.groupby('occupation').describe().age['max']\n",
     "minMale = dfMale.groupby('occupation').describe().age['min']\n",
     "rerataMale = dfMale.groupby('occupation').describe().age['mean']\n",
@@ -917,7 +1290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Buatlah sebuah dataframe yang menunjukkan persentase pria & wanita tiap profesi!"
+    "## 2.3 Buatlah sebuah dataframe yang menunjukkan persentase pria & wanita tiap profesi!"
    ]
   },
   {
