--- a/ujian_datavis_jcds07.ipynb
+++ b/ujian_datavis_jcds07.ipynb
@@ -165,10 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2. Buatlah sebuah dataframe yang menunjukkan data usia maksimal, minimal & rata-ratanya, berdasarkan profesi & gender!\n",
-    "\n",
-    "cara 1 : sesuai soal\n",
-    "cara 2 :"
+    "## 2.2. Buatlah sebuah dataframe yang menunjukkan data usia maksimal, minimal & rata-ratanya, berdasarkan profesi & gender!\n"
    ]
   },
   {
@@ -549,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Memisahkan data Female dan Male"
+    "#### Memisahkan data Female dan Male"
    ]
   },
   {
@@ -578,7 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dibuang sayang :''"
+    "#### Dibuang sayang :''"
    ]
   },
   {
